[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Main/Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/Main/ParallaxBackground.gd" type="Script" id=4]
[ext_resource path="res://Art/BG_sleep_ALT.png" type="Texture" id=5]
[ext_resource path="res://Art/SPOILER_BG_FLOOR.png" type="Texture" id=6]
[ext_resource path="res://Art/sprites/nuvem1.png" type="Texture" id=7]
[ext_resource path="res://Art/sprites/nuvem2.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="DynamicFont" id=2]
size = 64
outline_size = 3
outline_color = Color( 0.0392157, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Player_Kine" parent="." instance=ExtResource( 2 )]
position = Vector2( 81.5165, 458.31 )
collision_mask = 6

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2( 135.201, 632.432 )
scale = Vector2( -6.54564, -1.85711 )
collision_layer = 2
collision_mask = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
shape = SubResource( 1 )

[node name="SpawnTimer" type="Timer" parent="." groups=[
"timer",
]]
wait_time = 3.0

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scale = Vector2( 0.5, 0.5 )
transform = Transform2D( 0.5, 0, 0, 0.5, 0, 0 )
script = ExtResource( 4 )

[node name="SkyImage" type="ParallaxLayer" parent="ParallaxBackground" groups=[
"background",
]]
scale = Vector2( 2.12, 1 )
motion_mirroring = Vector2( 1200, 0 )

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground/SkyImage"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 30.1572, 36.094 )
color = Color( 0.65098, 0.862745, 0.937255, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clouds" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 5, 5 )
motion_mirroring = Vector2( 2500, 0 )

[node name="cloud01" type="TextureRect" parent="ParallaxBackground/Clouds"]
margin_left = 42.3785
margin_top = 182.228
margin_right = 1093.38
margin_bottom = 655.228
rect_scale = Vector2( 0.526604, 0.526604 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cloud02" type="TextureRect" parent="ParallaxBackground/Clouds"]
margin_left = 1627.34
margin_top = 67.8057
margin_right = 2678.34
margin_bottom = 567.806
rect_scale = Vector2( 0.526604, 0.526604 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundImage" type="ParallaxLayer" parent="ParallaxBackground" groups=[
"background",
]]
motion_mirroring = Vector2( 5000, 0 )

[node name="backImage" type="TextureRect" parent="ParallaxBackground/BackgroundImage"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 1.00147, 0.907314 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FloorImage" type="ParallaxLayer" parent="ParallaxBackground" groups=[
"background",
]]
motion_scale = Vector2( 10, 10 )
motion_mirroring = Vector2( 5000, 0 )

[node name="backImage" type="TextureRect" parent="ParallaxBackground/FloorImage"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 1.01099
margin_top = 973.871
margin_right = 5001.01
margin_bottom = 2053.87
rect_scale = Vector2( 1.00147, 0.907314 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HorizonLine" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 2000, 0 )

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground/HorizonLine"]
margin_left = -9.1333
margin_top = 973.199
margin_right = 30.8667
margin_bottom = 1013.2
rect_scale = Vector2( 64.6734, 0.252107 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -158.045
margin_right = 36.9554
margin_bottom = 78.0
custom_fonts/font = SubResource( 2 )
text = "Score"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreTimer" type="Timer" parent="." groups=[
"timer",
]]

[node name="Position2DUp" type="Position2D" parent="."]
position = Vector2( 1261.6, 438.442 )

[node name="Position2DDown" type="Position2D" parent="."]
position = Vector2( 1309.15, 563.594 )

[node name="CoinSpawner" type="Timer" parent="." groups=[
"timer",
]]
wait_time = 5.0
[connection signal="hit" from="Player_Kine" to="." method="_on_Player_hit"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="CoinSpawner" to="." method="_on_CoinSpawner_timeout"]
